# aoj-icpc-v2

./: .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  netlify.toml
api/: Cargo.toml  Dockerfile  diesel.toml
api/migrations/2019-06-26-134334_create_problems/: down.sql  up.sql
api/migrations/2019-06-28-132148_create_aoj_problems/: down.sql  up.sql
api/migrations/2019-06-28-133523_create_aoj_users/: down.sql  up.sql
api/migrations/2019-06-28-133947_create_aoj_solutions/: down.sql  up.sql
api/migrations/2019-07-07-094539_add_year_and_contest_type/: down.sql  up.sql
api/resources/: problems.json
api/scripts/: deploy.sh
api/src/: .schema.patch  aoj.rs  db.rs  lib.rs  main.rs  schema.rs
nginx/conf.d/: default.conf
src/: main.rs
ui/: Dockerfile  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.tsx  ProblemFilter.tsx  model.tsx  routes.tsx  utils.tsx
ui/src/components/: PointSummary.tsx  ProblemTable.tsx  SearchForm.tsx  TopBar.tsx  TopPage.tsx
