[package]
name = "aoj-icpc-api-server"
version = "0.1.0"
authors = ["ichyo <ichyo00@gmail.com>"]
edition = "2018"

[lib]
name = "aoj_icpc"
path = "src/lib.rs"

[dependencies]
aoj-client = { git = "https://github.com/ichyo/aoj-client" }

actix-web = "1.0"
diesel = { version = "1.0", features = ["postgres", "r2d2"] }
env_logger = "0.6.1"
failure = "0.1.5"
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.0"
